# HRcohort

./: .gitignore  README.md  categ_HR.py  edward_script.R  merging_googledrive_folders.Rmd  pyproject.toml
data/: Alaska.xlsx  Arkansas.xlsx  Idaho.csv  Kansas 2019.csv  PayPlanPublic_Louisiana.xlsx
hrcohort/: categ_HR.py  cli.py  constants.py  data_utils.py  edward_script.R  main.py  merging_googledrive_folders.Rmd  recreate_categ_HR.py  suggest.py
tests/: test.py  test_console.py
