[tool.poetry]
name = "hrcohort"
version = "0.1.0"
authors = [
    "Edward Huh <edwardhuh@brown.edu>",
    "Daniel Wang <daniel_wang1@brown.edu>"
]
readme = "README.md"
description = "A github repository for the Human Resources Cohort analysis"
license = "MIT"
homepage = "https://github.com/thepolicylab/HRcohort"
repository = "https://github.com/thepolicylab/HRcohort"
keywords = ["hrcohort"]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
ftfy = "^5.9"
pathlib = "^1.0.1"
click = "^7.1.2"
pandas = "^1.2.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^2.7.4"

[tool.poetry.scripts]
hrcohort = "hrcohort.cli:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df,pc"

[tool.pylint.messages_control]
disable = "C0330, C0326, R0912, R0913, R0914, R0915"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
